Fix: Footer stuck to bottom

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,6 +21,14 @@
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
+
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
 }
 
 footer p,
